# Cartoonifying-a-Photo

./: README.md
src/: CMakeLists.txt  bilateral_filter.cpp  colors.cpp  dilation.cpp  edges.cpp  filter_image.cpp  image.h  load_image.cpp  main.cpp  median_filter.cpp  process_image.cpp  resize_image.cpp  stb_image_write.h  utils.cpp  utils.h
src/main/: main.cpp
v1/: README.md
v1/src/: CMakeLists.txt  colors.cpp  edges.cpp  filter_image.cpp  image.h  main.cpp  process_image.cpp  stb_image.h
v2/: README.md
v2/src/: CMakeLists.txt  canny.cpp  image.h  main.cpp  stb_image.h  stb_image_write.h
